src/other/mico-2.3.12/test/idl/error/case5.idl

/*
 * Illegal form of recursion.
 */

struct S
{
  union U switch(long)
  {
    case 1: S s;
  } u;
};
